--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "nodemon": "^3.1.4"
   }
 }
